# image-processor

./: CMakeLists.txt
source/: CMakeLists.txt  border.cpp  border.hpp  command.cpp  command.hpp  convolution.cpp  convolution.hpp  demosaic.cpp  demosaic.hpp  main.cpp  median.cpp  median.hpp  pixel.cpp  pixel.hpp
